fix-alignment-1

--- a/style/gunjan.css
+++ b/style/gunjan.css
@@ -966,10 +966,10 @@ hr {
 }
 @media screen and (max-width: 580px){
     .panel-heading{
-        transform: translateX(10%);
+        transform: translateX(0);
     }
     .accordion-section .panel-default .panel-body {
-        transform: translateX(10%);
+        transform: translateX(0);
     }
     .accordion-section .panel-default .panel-title a{
         font-size: 1.1rem;
